--- a/style.css
+++ b/style.css
@@ -13,15 +13,19 @@
 	display: none;
 }
 /* navbar */
+
 .logo-img {
 	width: 120px;
 	height: auto;
-	margin-right:180px;
+	margin: 0 20px;
 }
 .menu {
 	display: flex;
 	align-items: center;
 	color: #716d6d;
+}
+.menu-nav {
+	display: block;
 }
 .menu-nav-item  {
 	font-size: 20px;
@@ -42,10 +46,10 @@
 .menu-icon {
 	font-size: 20px;
 	display: flex;
-	margin-top: 0;
+	margin-top: 30px;
 	position: absolute;
-	right: 30px;
 	color: black;
+	right: 70px;
 }
 .color-icon {
 	color: black;
@@ -66,6 +70,12 @@
 .menu-search-icon {
 	padding: 10px;
 }
+.navigation {
+	font-size: 28px;
+	margin-top: 26px;
+	margin-left: 12px;
+	display: none;
+}
 /* SLIDER */
 .caption-text {
 	top: 72%;
@@ -79,6 +89,11 @@
 .btn-trans {
 	background: transparent;
 }
+.slider-img {
+	width: 100%;
+	height: 700px;
+}
+
 /* popular-content */
 .popular-content {
 	text-align: center;
@@ -253,6 +268,7 @@
 	padding: 80px 0;
 	justify-content: space-around;
 	background-color: #DFB58B;
+	margin: 0;
 }
 .cart-text1 {
 	position: absolute;
@@ -1373,6 +1389,9 @@
 	font-size: 16px;
 	margin-right: 50px;
 }
+.option-icon {
+	display: none;
+}
 .dropdowncart {
 	margin-left: 30px;
 }
@@ -1503,7 +1522,7 @@
 .menu-carts {
 	margin: 30px 40px;
 	margin-top: 80px;
-	max-width: 300px;
+	max-width: 100%;
 }
 .menu-carts:hover {
 	cursor: pointer;
@@ -1523,7 +1542,7 @@
 }
 .cart-block {
 	position: relative;
-	width: 350px;
+	width: 100%;
 	margin: 0;
 	display: flex;
 	margin-top: -30px;
